# s_ota

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
ota/: app.py  services.py  settings.py  views.py
ota/tests/: conftest.py  test_services.py
